# practice-agent

./: .env  hello.py  malnutrition_blog.md  malnutrition_blog.txt  pyproject.toml  robotics_blog.txt  starlink_blog.md
writing_agent/: .env  agents.py  crew.py  tasks.py  tools.py
