[project]
name = "practice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.102.0",
    "dotenv>=0.9.9",
    "exa-py>=1.8.9",
    "load-dotenv>=0.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "streamlit>=1.44.1",
]
